# TV-Controller

backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/src/: config.py  dbcontext.py  interfaces.py  model.py
backend/src/managers/: audio_manager.py  linux_audio_manager.py  windows_audio_manager.py
backend/src/repositories/: __init__.py  repository.py
backend/src/routers/: __init__.py  command_router.py  media_router.py
backend/src/services/: __init__.py  command_service.py
